# skool

./: .gitignore  pyproject.toml
skool/: get_creator_data.py  get_profiles_data.py  main.py  remove_duplicates.py  separate_instagram.py  unique_urls_formatted.csv
skool/utils/profiles/Profile 2/: Affiliation Database  BrowsingTopicsState  Cookies  DIPS  Favicons  History  History-journal  Login Data  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Shortcuts  Translate Ranker Model  TransportSecurity  Visited Links  Web Data
skool/utils/profiles/Profile 2/DawnGraphiteCache/: data_1  index
skool/utils/profiles/Profile 2/DawnWebGPUCache/: data_1  index
skool/utils/profiles/Profile 2/Extension Rules/: LOG  LOG.old
skool/utils/profiles/Profile 2/Extension Scripts/: LOG  LOG.old
skool/utils/profiles/Profile 2/Extension State/: LOG  LOG.old
skool/utils/profiles/Profile 2/GPUCache/: data_1  index
skool/utils/profiles/Profile 2/Session Storage/: LOG  LOG.old
skool/utils/profiles/Profile 2/Sessions/: Session_13368752603168265  Session_13370397536024254  Tabs_13368752649046850  Tabs_13370397536230193
skool/utils/profiles/Profile 2/Site Characteristics Database/: LOG  LOG.old
skool/utils/queries/: creator_data.csv  general.csv  last_query_valid.csv  put_one_url_per_line.py  remove_duplicates.py  separate_instagram.py  unique_general.csv  valid.csv
skool/utils/queries/uniques/: unique_urls1.csv  with_instagram.csv  without_instagram.csv
skool/utils/scraper/: __init__.py
(+265 files in other folders)
